infra/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
